# MLIR-Cmake

./: CMakeLists.txt  ReadME.md  compile.sh  run.sh
lib/: CMakeLists.txt
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyType.cpp  PolyTypes.h  PolyTypes.td  ReadMe.md
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewrite.cpp  CMakeLists.txt  PassesReadMe.md
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h  Passes.td
test_files/: affine_loop_unroll.mlir  poly_syntax.mlir  power_2_plus_one.mlir
tools/: CMakeLists.txt  tutorials-opt.cpp
